RC1-bugfix:
    * User setup
    * Time filters are now timezone aware so they don't conflict with the server
      time filters are stored in GMT time. And then converted to user timezone
      when displaying
    * Use configglue configurations
    * Improved REST API now you get html descriptions for the API if enabled
    * -1 fixed for rejected trials
    * Deprecated lxmltool, all settings are now stored into text files (no more xml!)
    * Fixed multiple campaigns bug where more than 1 campaign running in parallel 
      wasn't been correctly ACKED