@@ -1,0 +1,11 @@
+# don't modify this file unless you know what you're doing
+# you better modify you're own setup settings
+[rpyc]
+rpc_host = 0.0.0.0
+rpc_port = 8010
+rpc_daemonize = True
+rpc_threaded = True
+rpc_autoregister = False
+rpc_server_user = root
+rpc_server_group = root
+rpc_pidfile = %(openproximity.aircable_path)s/cp.pid
